# kindle-server

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  image-converter.sh  kindle-manager.sh  tailwind.config.js
kindle-server/: Cargo.toml  Dockerfile
kindle-server/src/: main.rs
kindle-server/src/templates/: elements.rs  mod.rs  pages.rs
kindle_cli/: Cargo.toml
kindle_cli/src/: main.rs
kindle_manager/: Cargo.toml
kindle_manager/src/: lib.rs
kindle_server/: Cargo.toml  Dockerfile  tailwind.config.js
kindle_server/src/: kindle_manager.rs  kindle_manager_wrapper.rs  main.rs
kindle_server/src/templates/: elements.rs  oob.rs  pages.rs
kindle_server/static/res/: style.css  tw.css
src/: image_converter_wrapper.rs  kindle_manager_wrapper.rs  main.rs
src/templates/: elements.rs  errors.rs  mod.rs  oob.rs  pages.rs
static/: helper.js  index.html  style.css  tw.css
templates/: hello.html.tera
