[package]
name = "kindle_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
kindle_manager = { path = "../kindle_manager" }
openssh = "0.11.3"
tokio = { version = "1.41.1", features = ["full"] }
