[package]
name = "kindle_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
kindle_manager = { path = "../kindle_manager" }
maud = { version = "0.26.0", features = ["rocket"]}
openssh = "0.11.3"
thiserror = "2.0.3"
